--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-minimal
+title: Abdoulaye Diack
+description: Research Program Manager at Google AI
+logo: https://drive.google.com/file/d/1nsvz9OT6m6k2ef3pX5RBBNiA8B1HYY5T/view?usp=sharing
+show_downloads: false
