--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
 title: Abdoulaye Diack
 description: Research Program Manager at Google AI
-logo: https://drive.google.com/file/d/1nsvz9OT6m6k2ef3pX5RBBNiA8B1HYY5T/view?usp=sharing
+logo: https://media-exp1.licdn.com/dms/image/C4E03AQH-XdwEctfgZA/profile-displayphoto-shrink_400_400/0/1639757280214?e=1648080000&v=beta&t=O477QvEX8qwsZqyBvUaihe7vRbBx94UMxO9BaLelKhI
 show_downloads: false
