--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 theme: jekyll-theme-minimal
 title: Abdoulaye Diack
 description: Research Program Manager at Google AI
+github_username:  adiack
+google_analytics: G-6629WV7R7N
 logo: https://drive.google.com/uc?id=1nsvz9OT6m6k2ef3pX5RBBNiA8B1HYY5T
 show_downloads: false
-google_analytics: G-6629WV7R7N
+
