--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ description: Program Manager AI and ML at Google Research
 url: https://adiack.github.io
 github_username:  adiack
 google_analytics: G-6629WV7R7N
-logo: https://drive.google.com/uc?id=1EKr4N5TBCs1z1USBeHrBzGVuvJVn4hu1
+logo: https://adiack.github.io/assets/DP_Pompidou_green.webp
 show_downloads: false
 
