--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: Abdoulaye Diack
-description: Program Manager AI and ML at Google Research
+description: Program Manager at Google Research
 url: https://adiack.github.io
 github_username:  adiack
 google_analytics: G-6629WV7R7N
